--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -1,3 +1,28 @@
+body,
+p,
+h1,
+h2 {
+  font-family: Tahoma, Helvetica, sans-serif;
+}
+h2 {
+  font-size: 1.2em;
+}
+p,
+body {
+  font-size: 0.9em;
+}
+h1 {
+  font-size: 1.8em;
+}
+
+#masthead h1 {
+  padding: 0.25em;
+}
+
+body {
+  margin: 0;
+}
+
 header {
   height: 45px;
   white-space: nowrap;
@@ -6,4 +31,107 @@ header {
 }
 .right {
   float: right;
+}
+#main {
+  display: inline-flex;
+}
+
+#right-sidebar {
+  height: 600px;
+  float: left;
+  background-color: #f5f5f5;
+  margin: 2em 2em 2em 5em;
+  width: 11em;
+}
+
+#right-sidebar p {
+  margin-left: 1em;
+  margin-right: 1em;
+}
+#center {
+  height: 600px;
+  float: right;
+  background-color: #f5f5f5;
+  margin: 2em 5em 2em 0em;
+  width: 80%;
+  overflow: auto;
+  padding: 0.5em;
+}
+#center h1 {
+  margin: 0.6em 0.5em -0.4em;
+}
+
+.entry {
+  padding-left: 2em;
+  margin: 1em 1em 3em;
+  clear: both;
+}
+
+figure {
+  float: left;
+  position: relative;
+}
+
+figcaption {
+  position: absolute;
+  background-color: black;
+  color: white;
+  opacity: 0.7;
+  width: 140px;
+  height: 20px;
+  padding: 5px;
+  top: 120px;
+}
+.overlayed {
+  position: absolute;
+  right: 0;
+}
+
+.right {
+  float: right;
+}
+
+.linkbutton {
+  color: white;
+  padding: 0.6em 0.8em;
+  background-color: #ff8800;
+  text-decoration: none;
+  font-size: smaller;
+}
+
+footer {
+  clear: both;
+  background-color: #474747;
+  color: white;
+  padding: 1em 2em;
+}
+
+.footer-related {
+  width: 20em;
+  color: #a5a3a4;
+  float: left;
+}
+
+.footer-section {
+  color: #a5a3a4;
+  padding-left: 22em;
+}
+hr {
+  border: 2px solid darkorange;
+  margin-right: 1em;
+}
+footer img {
+  padding: 3px;
+}
+
+ul li {
+  display: inline;
+  padding: 0.15em;
+}
+nav {
+  font-family: "Trebuchet MS", "Lucida Grande", Tahoma, sans-serif;
+  font-size: 1.125em;
+}
+#logo {
+  text-align: center;
 }
